# koreaJobApiV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py
app/: config.py  dependencies.py  exceptions.py  logging.py  main.py
app/cache/: __init__.py  keys.py  readthrough.py  redis_client.py
app/db/: __init__.py  engine.py  models.py
app/middleware/: __init__.py  rate_limit.py  request_id.py
app/repositories/: __init__.py  job_postings_pg.py
app/routers/: health.py  jobs.py
app/schemas/: __init__.py  job.py
app/search/: __init__.py  cursor.py  index_config.py  meili.py  query.py
app/services/: __init__.py  job_service.py
app/sync/: __init__.py  cli.py  document.py  runner.py
deploy/: .env.production.example  crontab
scripts/: entrypoint.sh  stamp_baseline.py
tests/: conftest.py
tests/fixtures/: etl_schema.sql  seed.py  seed.sql
tests/integration/: test_cache_behavior.py  test_db.py  test_jobs_detail_stats.py  test_jobs_facets.py  test_jobs_list.py  test_jobs_suggest.py  test_meili_init_index.py  test_observability.py  test_rate_limit_middleware.py  test_sync_reindex.py
tests/unit/: test_cache_keys.py  test_config.py  test_exceptions.py  test_health.py  test_rate_limit_middleware.py  test_request_id_middleware.py  test_search_cursor.py  test_search_query.py
